fixes text on mobile

--- a/src/app/components/lazy-loading/item/item.component.scss
+++ b/src/app/components/lazy-loading/item/item.component.scss
@@ -5,6 +5,7 @@
   border: 1px solid #efefef;
   padding: 20px;
   height: 120px;
+  overflow: hidden;
 
   &:hover {
     cursor: pointer;
